--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,9 +129,17 @@ span{
 }
 #moderate-uv-index{
     background-color: yellow;
+    color: #212629;
+    padding: 5px;
+    border-radius: 3px;
+    
 }
 #high-uv-index{
     background-color: red;
+    color: white;
+    padding: 5px;
+    border-radius: 3px;
+    
 }
 #forecast-weather-icon{
     width: 50px;
